--- a/src/components/screens/home/styles/Home_media.module.scss
+++ b/src/components/screens/home/styles/Home_media.module.scss
@@ -248,3 +248,58 @@
         }
         }
 }
+
+// .image-container {
+//     position: relative;
+//     width: 300px;
+//     height: 200px;
+
+//     .placeholder {
+//         position: absolute;
+//         top: 0;
+//         left: 0;
+//         width: 100%;
+//         height: 100%;
+//         background-color: #ccc;
+//         animation: fade-in 0.5s ease-in-out forwards;
+//       }
+
+//       @keyframes fade-in {
+//         from {
+//           opacity: 1;
+//         }
+//         to {
+//           opacity: 0;
+//         }
+//       }
+      
+//       .image {
+//         position: absolute;
+//         top: 0;
+//         left: 0;
+//         width: 100%;
+//         height: 100%;
+//         opacity: 0;
+//         transition: opacity 0.5s ease-in-out;
+//       }
+      
+//       .visible {
+//         opacity: 1;
+//       }
+//   }
+
+//   .loaded {
+//     display: block;
+
+//     .loaded .placeholder {
+//         display: none;
+//       }
+      
+//       .loaded .image {
+//         opacity: 1;
+//       }
+      
+//       .loaded .image.visible {
+//         visibility: visible;
+//       }
+//   }
